<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fit Notifications</string>
    <string name="other_app_icon">App icon of an installed app</string>
    <string name="about_app">About app</string>
    <string name="instructions">Start interactive setup</string>
    <string name="manual_setup_instructions">Setup Instructions</string>
    <string name="faqs">Frequently asked questions</string>
    <string name="smart_dinosaurs">Smart Dinosaurs Entertainment</string>
    <string name="donate">Donate</string>
    <string name="support_dev">Support the developer!</string>
    <string name="whats_new">What\'s new</string>
    <string name="opensource">Open source licenses</string>
    <string name="credits">Credits</string>
    <string name="app_choices">Setup Apps</string>
    <string name="app_choices_activity_title">Select Apps</string>
    <string name="enabled_apps_filter_menu">Filter Enabled Apps</string>
    <string name="rate_app">Like our app? Then rate it!</string>
    <string name="feedback_step1_title">Send Feedback: Step 1</string>
    <string name="feedback_step1_message">Enter your feedback below:</string>
    <string name="no_feedback_message">You must type some feedback to proceed!</string>
    <string name="select_send_feedback_app">Step 2: Select app to send feedback</string>
    <string name="email_subject">Feedback for Fit Notifications app</string>
    <string name="notification_text">[Placeholder notification] Enabling auto-dismiss setting for this may cause the notification to be removed from your Fitbit device as well</string>
    <string name="test_notification">Test Notification</string>
    <string name="test_notification_sent">Test notification sent</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="disable_notification_access">Disable Notification Access</string>
    <string name="enable_app_notifications">Enable App Notifications</string>
    <string name="start_service">Start Service</string>
    <string name="turn_on_service">TURN ON</string>
    <string name="turn_off_service">TURN OFF</string>
    <string name="service_on">ON</string>
    <string name="service_off">OFF</string>
    <string name="search_menu">App search</string>
    <string name="service_state">Notification service state: </string>
    <string name="enable_logging">Enable logging: </string>
    <string name="notification_permission_toast">This app requires your permission to send notifications to function properly</string>
    <string name="intro_get_started_button">Get started</string>
    <string name="intro_welcome_title">Get all your notifications on your Fitbit device</string>
    <string name="intro_welcome_desc">This app is designed for use with the Fitbit platform. It requires the official Fitbit app, and is compatible with most Fitbit devices. We are not affiliated with Fitbit, Inc.</string>
    <string name="intro_enable_access_title">First, enable notification access</string>
    <string name="intro_enable_access_desc">You must enable notification access for this app and the official Fitbit app. Click the button below, and then enable access for both apps in the next screen.</string>
    <string name="intro_enable_access_update_title">Notification access enabled</string>
    <string name="intro_enable_access_update_desc">Nice, We now have notification access! Let\'s move on to the next step.</string>
    <string name="intro_enable_access_success_title">Great, you already enabled notification access!</string>
    <string name="intro_enable_access_success_desc">This app requires notification access to work. And looks like you have already enabled it! Move on to the next step!</string>
    <string name="intro_enable_app_notifications_title">Allow this app to send notifications</string>
    <string name="intro_enable_app_notifications_desc">You must allow the Fit Notifications app to send you notifications in order for this app to function properly. Since the key functionality of this app is to send notifications to your Fitbit device, this permission is required for this app to function properly.</string>
    <string name="intro_enable_app_notifications_update_title">App notifications enabled!</string>
    <string name="intro_enable_app_notifications_update_desc">Nice, you granted this app permission to show notifications! Let\'s move on to the next step.</string>
    <string name="intro_enable_app_notifications_update_fail_dialog_title">App notification permission is required!</string>
    <string name="intro_enable_app_notifications_update_fail_dialog_message">Please grant this app permission to show notifications so that it can function properly! You can enable notifications for this app by going to the app\'s settings by clicking the button below.</string>
    <string name="intro_enable_app_notifications_settings">Open Settings</string>
    <string name="intro_enable_app_notifications_success_title">Great, you already enabled app notifications!</string>
    <string name="intro_enable_app_notifications_success_desc">This app requires your permission to send notifications to function properly. And looks like you have already allowed this permission! Move on to the next step!</string>
    <string name="intro_get_fitbit_title">Install the official Fitbit app!</string>
    <string name="intro_get_fitbit_desc">Looks like you don\'t have the official Fitbit app installed. We\'ll need that, so let\'s install it by clicking the button below.</string>
    <string name="intro_get_fitbit_button">Install Fitbit app</string>
    <string name="intro_setup_fitbit_title1">Setup notifications in Fitbit app: Step 1</string>
    <string name="intro_setup_fitbit_title2">Setup notifications in Fitbit app: Step 2</string>
    <string name="intro_setup_fitbit_title3">Setup notifications in Fitbit app: Step 3</string>
    <string name="intro_setup_fitbit_desc1">First, go into device settings by clicking the device icon in the Fitbit app.
                                            \n\n<b>Compatible Fitbit devices:</b>\nFitbit Alta, Alta HR, Charge 2, Charge 3,
                                            Blaze, Surge, Ionic, Versa, and any future device that supports \"Text Notifications\".
                                            Limited compatibility with Fitbit Flex 2 (lights up the LEDs).</string>
    <string name="intro_setup_issues_title">Setup issues?</string>
    <string name="intro_setup_issues_message">Looks like you already finished setup once.
                                              \n\nIf you are still having issues with notifications, try rebooting the phone and setup again.
                                              You can also go through the troubleshooting section of this app for help and useful resources.</string>
    <string name="intro_setup_issues_ok">OK</string>
    <string name="intro_setup_fitbit_desc2">Select \'Notifications\' option under \'General\'. Then, Select \'Text Messages\' option.</string>
    <string name="intro_setup_fitbit_desc3">Choose \'Fit Notifications\' app as your default messaging app. Then, sync your Fitbit device
        within the Fitbit app. Do not choose this app for the \'Call\' and \'Calendar Events\' options, otherwise you MAY NOT get any notifications.
        \n\nYou can also enable the \'Always Vibrate\' option in this setting page in the Fitbit app, if you plan to use \'Do Not Disturb\' or \'Silent\' mode.</string>
    <string name="intro_setup_fitbit_button3">Open Fitbit app</string>
    <string name="intro_get_fitbit_toast_text3">Fitbit app not found! Go back and install the official Fitbit app!</string>
    <string name="intro_select_apps_desc">You can now choose the apps whose notifications you want to receive on your Fitbit device.
        They will appear like Text Notifications on the device and will have the app name for clarity.
        \n\nYou can also configure additional settings using the gear icon (settings icon) for each app individually.</string>
    <string name="intro_start_service_title">Start the notification listening service</string>
    <string name="intro_start_service_desc">This service will try to stay in the background. If you stop receiving notifications, restart the service from this app. Don\'t use task killer apps, as they can disable the service.</string>
    <string name="intro_dnd_mode_title">Do not disturb mode on Android 6.0+</string>
    <string name="intro_dnd_mode_desc">If you enable do not disturb mode, then no notifications will be forwarded to your Fitbit device, by default. To change that, you need to follow specific instructions by clicking below.
                                       \n\nYou should also enable the \'Always Vibrate\' option in the Fitbit app\'s notifications settings page.</string>
    <string name="intro_dnd_mode_button_configure">Configure</string>
    <string name="intro_dnd_mode_button">Extra Instructions</string>
    <string name="intro_dnd_mode_button_oreo">Extra Instructions for Android 8 and above</string>
    <string name="intro_dnd_mode_button_nougat">Extra Instructions for Android 7</string>
    <string name="intro_dnd_mode_button_marshmallow">Extra Instructions for Android 6</string>
    <string name="feedback">Feedback</string>
    <string name="placeholder_notif_settings">Placeholder Notification Settings</string>
    <string name="relayed_notif_settings">Relayed Notification Settings</string>
    <string name="limit_notif_settings">Notification Limit Settings</string>
    <string name="dismiss_placeholder_notif">Dismiss placeholder notification</string>
    <string name="dismiss_placeholder_notif_summary">Automatically dismiss placeholder notification</string>
    <string name="dismiss_placeholder_notif_key">DismissAppNotification</string>
    <string name="placeholder_dismiss_delay">Dismiss</string>
    <string name="placeholder_dismiss_delay_key">PlaceholderDismissDelay</string>
    <string name="dismiss_relayed_notif">Dismiss relayed notifications</string>
    <string name="dismiss_relayed_notif_summary">Automatically dismiss relayed notifications from other apps</string>
    <string name="dismiss_relayed_notif_key">DismissOtherNotifications</string>
    <string name="relayed_dismiss_delay">Dismiss</string>
    <string name="relayed_dismiss_delay_key">RelayedDismissDelay</string>
    <string name="limit_notif">Limit number of relayed notifications</string>
    <string name="limit_notif_summary">Set number of notifications each app can send to your Fitbit device.\n\nUse this if you receive too many notifications on your device in a short duration.</string>
    <string name="limit_notif_key">limitNotifications</string>
    <string name="notif_limit_duration">Limit Duration</string>
    <string name="notif_limit_duration_key">NotiflimitDuration</string>
    <string name="filter_heading">Filter Text</string>
    <string name="filter_desc">Separate multiple patterns with a semicolon (;). Filters can either be exclusive or inclusive. Only notifications that satisfy the filters will be allowed. Click the info button for more details.</string>
    <string name="discard_empty_notifications">Discard empty notifications</string>
    <string name="schedule_heading">Notification Schedule</string>
    <string name="schedule_desc">Notifications from this app will only be forwarded to your Fitbit from the specified start time till the specified end time.</string>
    <string name="all_day">All day schedule</string>
    <string name="next_day">(Next day)</string>
</resources>