<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/placeholder_notif_settings">
        <SwitchPreference
            android:title="@string/dismiss_placeholder_notif"
            android:summary="@string/dismiss_placeholder_notif_summary"
            android:key="@string/dismiss_placeholder_notif_key"
            android:defaultValue="false" />
        <com.abhijitvalluri.android.fitnotifications.alobar.preference.NumberPickerPreference
            android:title="@string/placeholder_dismiss_delay"
            android:key="@string/placeholder_dismiss_delay_key"
            android:defaultValue="5"
            app:minValue="5"
            app:maxValue="60"
            app:wrapSelectorWheel="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/relayed_notif_settings">
        <SwitchPreference
            android:title="@string/dismiss_relayed_notif"
            android:summary="@string/dismiss_relayed_notif_summary"
            android:key="@string/dismiss_relayed_notif_key"
            android:defaultValue="false" />

        <com.abhijitvalluri.android.fitnotifications.alobar.preference.NumberPickerPreference
            android:title="@string/relayed_dismiss_delay"
            android:key="@string/relayed_dismiss_delay_key"
            android:defaultValue="5"
            app:minValue="5"
            app:maxValue="60"
            app:wrapSelectorWheel="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/limit_notif_settings">
        <SwitchPreference
            android:title="@string/limit_notif"
            android:summary="@string/limit_notif_summary"
            android:key="@string/limit_notif_key"
            android:defaultValue="false" />

        <com.abhijitvalluri.android.fitnotifications.alobar.preference.NumberPickerPreference
            android:title="@string/notif_limit_duration"
            android:key="@string/notif_limit_duration_key"
            android:defaultValue="1"
            app:minValue="1"
            app:maxValue="60"
            app:wrapSelectorWheel="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/debug_settings">
        <SwitchPreference
            android:title="@string/override_interactive_setup_title"
            android:summary="@string/override_interactive_setup_disabled_summary"
            android:key="@string/override_interactive_setup_key"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>